[package]
name = "imgbed"
version = "0.1.0"
description = "Clipboard image upload to GitHub drawing bed"
authors = ["JaikenWong"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "imgbed_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
reqwest = { version = "0.12", features = ["json", "blocking"] }
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
image = "0.25"
